<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/include_title_bar" />

    <ScrollView
        android:id="@+id/sv_service_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/style_service_detail_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/style_service_detail_text_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/vertical_grey_line"
                    android:text="@string/service_order_detail_date" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/tv_service_detail_date"
                    style="@style/style_service_detail_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_service_detail_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/style_service_detail_text_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/vertical_grey_line"
                    android:text="@string/service_order_detail_addr" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/tv_service_detail_addr"
                    style="@style/style_service_detail_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_service_detail_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/style_service_detail_text_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/vertical_grey_line"
                    android:text="@string/service_order_detail_info" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_service_detail_sex"
                        style="@style/style_service_detail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/tv_service_detail_age"
                        style="@style/style_service_detail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/style_service_detail_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/style_service_detail_text_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/vertical_grey_line"
                    android:text="@string/service_order_detail_evalution_result" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/tv_service_detail_situation"
                    style="@style/style_service_detail_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                     />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/line_grey" />

            <LinearLayout
                android:id="@+id/ly_service_detail_children_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_them_color_radius_rectangle"
                android:orientation="horizontal"
                android:padding="8dp" 
                android:visibility="visible">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    android:text="@string/service_order_detail_custom_phone"
                    android:drawableLeft="@drawable/ic_cell_phone"
                    android:textColor="#2d86ff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_service_detail_childPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:textColor="#2d86ff"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_service_detail_parent_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape_them_color_radius_rectangle"
                android:orientation="horizontal"
                android:padding="10dp" 
                android:visibility="visible">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/ic_telephone"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/service_order_detail_servered_phone"
                    android:textColor="#2d86ff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_service_detail_parenPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:textColor="#2d86ff"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/line_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp" >

                <TextView
                    style="@style/style_service_detail_text_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/vertical_grey_line"
                    android:text="@string/service_order_detail_feedback" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <EditText
                    android:id="@+id/edt_service_detail_service_feedback"
                    style="@style/style_service_detail_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_service_detail_confirm"
                style="@style/style_common_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:text="@string/confirm" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>